[gd_scene load_steps=3 format=3 uid="uid://cl0aae0gtdvx4"]

[ext_resource type="Script" path="res://scripts/menus/settings/settings.gd" id="1"]
[ext_resource type="Theme" uid="uid://bir7klqliay2t" path="res://themes/main_theme.tres" id="2"]

[node name="SettingsScreen" type="Window"]
title = "Settings"
position = Vector2i(365, 50)
size = Vector2i(520, 590)
script = ExtResource("1")

[node name="NinePatchRect" type="Panel" parent="."]
custom_minimum_size = Vector2(500, 580)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -290.0
offset_right = 256.0
offset_bottom = 290.0
theme = ExtResource("2")

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="ScrollContainer" type="TabContainer" parent="NinePatchRect/MarginContainer"]
layout_mode = 2

[node name="General" type="TabBar" parent="NinePatchRect/MarginContainer/ScrollContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/MarginContainer/ScrollContainer/General"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="GridContainer" type="GridContainer" parent="NinePatchRect/MarginContainer/ScrollContainer/General/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8

[node name="UnitSelection" type="Panel" parent="NinePatchRect/MarginContainer/ScrollContainer/General/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/ScrollContainer/General/MarginContainer/GridContainer/UnitSelection"]
layout_mode = 0
anchor_right = 1.0
offset_top = 2.0
offset_bottom = 16.0
text = "Measurement Units"

[node name="OptionButton" type="OptionButton" parent="NinePatchRect/MarginContainer/ScrollContainer/General/MarginContainer/GridContainer/UnitSelection"]
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -32.0
offset_bottom = -2.0

[node name="Blank" type="Panel" parent="NinePatchRect/MarginContainer/ScrollContainer/General/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/ScrollContainer/General/MarginContainer/GridContainer/Blank"]
layout_mode = 0
anchor_right = 1.0
offset_top = 2.0
offset_bottom = 16.0

[node name="OptionButton" type="OptionButton" parent="NinePatchRect/MarginContainer/ScrollContainer/General/MarginContainer/GridContainer/Blank"]
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -32.0
offset_bottom = -2.0

[node name="Sound" type="TabBar" parent="NinePatchRect/MarginContainer/ScrollContainer"]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/MarginContainer/ScrollContainer/Sound"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="GridContainer" type="GridContainer" parent="NinePatchRect/MarginContainer/ScrollContainer/Sound/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8

[node name="MusicVolume" type="Panel" parent="NinePatchRect/MarginContainer/ScrollContainer/Sound/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/ScrollContainer/Sound/MarginContainer/GridContainer/MusicVolume"]
layout_mode = 0
anchor_right = 1.0
offset_top = 2.0
offset_bottom = 16.0
text = "Music Volume"

[node name="VolumeSlider" type="HSlider" parent="NinePatchRect/MarginContainer/ScrollContainer/Sound/MarginContainer/GridContainer/MusicVolume"]
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -32.0
offset_bottom = -2.0
max_value = 1.0
step = 0.05
allow_greater = true
allow_lesser = true

[node name="Blank2" type="Panel" parent="NinePatchRect/MarginContainer/ScrollContainer/Sound/MarginContainer/GridContainer"]
visible = false
custom_minimum_size = Vector2(150, 50)
layout_mode = 2

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/ScrollContainer/Sound/MarginContainer/GridContainer/Blank2"]
layout_mode = 0
anchor_right = 1.0
offset_top = 2.0
offset_bottom = 16.0

[node name="OptionButton" type="OptionButton" parent="NinePatchRect/MarginContainer/ScrollContainer/Sound/MarginContainer/GridContainer/Blank2"]
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -32.0
offset_bottom = -2.0

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="item_selected" from="NinePatchRect/MarginContainer/ScrollContainer/General/MarginContainer/GridContainer/UnitSelection/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="drag_ended" from="NinePatchRect/MarginContainer/ScrollContainer/Sound/MarginContainer/GridContainer/MusicVolume/VolumeSlider" to="." method="_on_VolumeSlider_drag_ended"]
